--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-white sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/logo-dark.svg" alt="logo" width="100%" />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,9 +56,29 @@
               <a class="nav-link" href="#blog">Blog</a>
             </li>
           </ul>
+          <a href="#" class="btn btn-brand ms-lg-3">Tickets</a>
         </div>
       </div>
     </nav>
+
+    <!-- hero -->
+    <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="text-uppercase fw-semibold display-1">
+              Welcome to Botanik
+            </h1>
+            <h5>GREEN THUMBS UNITE</h5>
+            <div>
+              <a href="#" class="'btn btn-brand">EXPLORE</a>
+              <a href="#" class="'btn btn-light">TICKETS</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
   </body>
