--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </h1>
             <h5>GREEN THUMBS UNITE</h5>
             <div>
-              <a href="#" class="'btn btn-brand">EXPLORE</a>
-              <a href="#" class="'btn btn-light">TICKETS</a>
+              <a href="#" class="btn btn-brand">EXPLORE</a>
+              <a href="#" class="btn btn-light">TICKETS</a>
             </div>
           </div>
         </div>
