--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     </nav>
 
     <!-- hero -->
-    <section id="hero" class="min-vh-100 d-flex align-items-center text-center">
+    <section id="hero" class=" min-vh-100 d-flex align-items-center text-center">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1 class="text-uppercase fw-semibold display-1">
+            <h1 class="text-uppercase text-white fw-semibold display-1">
               Welcome to Botanik
             </h1>
-            <h5>GREEN THUMBS UNITE</h5>
-            <div>
-              <a href="#" class="btn btn-brand">EXPLORE</a>
-              <a href="#" class="btn btn-light">TICKETS</a>
+            <h2 class="text-white mt-3 mb-4">GREEN THUMBS UNITE</h5>
+            <div class="'hero-btns">
+              <a href="#" class="btn btn-light me-2 ">EXPLORE</a>
+              <a href="#" class="btn btn-brand ms-2">TICKETS</a>
             </div>
           </div>
         </div>
