--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
       </div>
     </section>
 
+    <!-- about -->
+    <section id="about" class="section-padding">
+      <div class="container ">
+        <div class="row">
+          <div class="col-12">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold ">ABOUT BOTANIK</h1>
+              <div class="line"></div>
+              <p>GREEN THUMBS UNITE</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <img src="./assets/images/about.jpg" alt="about"/>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
   </body>
