about page copy and spacing

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
     <section id="about" class="section-padding">
       <div class="container ">
         <div class="row">
-          <div class="col-12">
+          <div class="col-12 text-center">
             <div class="section-title">
-              <h1 class="display-4 fw-semibold ">ABOUT BOTANIK</h1>
+              <h1 class="display-4 fw-semibold">ABOUT BOTANIK</h1>
               <div class="line"></div>
-              <p>GREEN THUMBS UNITE</p>
+              <p>Imagine some of the most inspired and provocative researchers, artists, business people, teachers, healers and other leaders in the world of botany — all gathered in a single place.</p>
             </div>
           </div>
         </div>
