offerings page updated

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="section-title">
               <h1 class="display-4 fw-semibold">OFFERINGS</h1>
               <div class="line"></div>
-              <p>Imagine some of the most inspired and provocative researchers, artists, business people, teachers, healers and other leaders in the world of botany — all gathered in a single place.</p>
+              <p>Botanik has many offerings that make the experience multidemnional and unforgettable. </p>
             </div>
           </div>
         </div>
@@ -167,7 +167,52 @@
                 <i class="ri-speak-line"></i>
               </div>
               <h5 class="mt-4 mb-3">Speakers</h5>
-              <p>Listen to lectures by some of the world's leading minds in botany. From sustainability, to hraling, and beyond, there is something for everyone. </p>
+              <p>Listen to lectures by some of the world's leading minds in botany. </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="offerings theme-shadow p-lg-5 p-4">
+              <div class="iconbox">
+                <i class="ri-shapes-line"></i>
+              </div>
+              <h5 class="mt-4 mb-3">Workshops</h5>
+              <p>Learn hands on skills that can be applied in your own practice.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="offerings theme-shadow p-lg-5 p-4">
+              <div class="iconbox">
+                <i class="ri-restaurant-line"></i>
+              </div>
+              <h5 class="mt-4 mb-3">Cuisine</h5>
+              <p>Farm to table fine dining, grown with restorative agricultural methods.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="offerings theme-shadow p-lg-5 p-4">
+              <div class="iconbox">
+                <i class="ri-shopping-basket-line"></i>
+              </div>
+              <h5 class="mt-4 mb-3">Wares</h5>
+              <p>Shop from dozens of vendors for all of your plant-based needs. </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="offerings theme-shadow p-lg-5 p-4">
+              <div class="iconbox">
+                <i class="ri-sparkling-line"></i>
+              </div>
+              <h5 class="mt-4 mb-3">Entertainment</h5>
+              <p>Listen to live music and peruse an array of visual arts celebrating botany.</p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="offerings theme-shadow p-lg-5 p-4">
+              <div class="iconbox">
+                <i class="ri-seedling-line"></i>
+              </div>
+              <h5 class="mt-4 mb-3">Gardens</h5>
+              <p>Explore and enjoy the property's many gardens and green spaces.</p>
             </div>
           </div>
         </div>
