--- a/index.html
+++ b/index.html
@@ -152,15 +152,7 @@
       </div>
     </section>
 
-    <!-- offerings
-    speakers
-    workshops
-    cuisine
-    wares
-    entertainment
-    gardens
-    -->
-
+    <!-- offerings -->
     <section id="offerings" class="section-padding border-top">
       <div class="container">
         <div class="row">
@@ -175,7 +167,7 @@
             </div>
           </div>
         </div>
-        <div class="row text-center">
+        <div class="row g-4 text-center">
           <div class="col-lg-4 col-sm-6">
             <div class="offerings theme-shadow p-lg-5 p-4">
               <div class="iconbox">
@@ -244,6 +236,30 @@
                 Explore and enjoy the property's many gardens and green spaces.
               </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- counter -->
+    <section id="counter" class="section-padding">
+      <div class="container text-center">
+        <div class="row g-4">
+          <div class="col-lg-3 col-sm-6">
+            <h1>40,000+</h1>
+            <h6>Attendees</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1>40,000+</h1>
+            <h6>Attendees</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1>40,000+</h1>
+            <h6>Attendees</h6>
+          </div>
+          <div class="col-lg-3 col-sm-6">
+            <h1>40,000+</h1>
+            <h6>Attendees</h6>
           </div>
         </div>
       </div>
