--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
       <div class="container text-center">
         <div class="row g-4">
           <div class="col-lg-3 col-sm-6">
-            <h1>40,000+</h1>
-            <h6>Attendees</h6>
+            <h1>15</h1>
+            <h6>Speakers</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>40,000+</h1>
-            <h6>Attendees</h6>
+            <h1>33</h1>
+            <h6>Workshops</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>40,000+</h1>
-            <h6>Attendees</h6>
+            <h1>150+</h1>
+            <h6>Vendors</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>40,000+</h1>
+            <h1>10,000+</h1>
             <h6>Attendees</h6>
           </div>
         </div>
