--- a/index.html
+++ b/index.html
@@ -246,20 +246,20 @@
       <div class="container text-center">
         <div class="row g-4">
           <div class="col-lg-3 col-sm-6">
-            <h1>15</h1>
-            <h6>Speakers</h6>
+            <h1 class="display-4">15</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Speakers</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>33</h1>
-            <h6>Workshops</h6>
+            <h1 class="display-4">33</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Workshops</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>150+</h1>
-            <h6>Vendors</h6>
+            <h1 class="display-4">150+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Vendors</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1>10,000+</h1>
-            <h6>Attendees</h6>
+            <h1 class="display-4">10,000+</h1>
+            <h6 class="text-uppercase mt-3 mb-0">Attendees</h6>
           </div>
         </div>
       </div>
