--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -45,7 +49,7 @@
               <a class="nav-link" href="#offerings">Offerings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfolio</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#reviews">Reviews</a>
@@ -265,7 +269,35 @@
       </div>
     </section>
 
+    <!-- gallery -->
+    <section id="portfolio" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">GALLERY</h1>
+              <div class="line"></div>
+              <p>
+                Botanik has many offerings that make the experience
+                multidemnional and unforgettable.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="gallery-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery1.jpg" />
+              </div>
+              <a href="#" class="iconbox"><i class="ri-search-line"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   </body>
 </html>
