--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <h6 class="text-uppercase mt-3 mb-0">Vendors</h6>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <h1 class="display-4">10,000+</h1>
+            <h1 class="display-4">2,000+</h1>
             <h6 class="text-uppercase mt-3 mb-0">Attendees</h6>
           </div>
         </div>
@@ -270,7 +270,7 @@
     </section>
 
     <!-- gallery -->
-    <section id="portfolio" class="section-padding">
+    <section id="gallery" class="section-padding">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
@@ -286,7 +286,7 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <div class="gallery-item image-zoom">
+            <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/gallery1.jpg" />
               </div>
@@ -296,6 +296,7 @@
         </div>
       </div>
     </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
