--- a/index.html
+++ b/index.html
@@ -277,20 +277,81 @@
             <div class="section-title">
               <h1 class="display-4 fw-semibold">GALLERY</h1>
               <div class="line"></div>
-              <p>
-                Botanik has many offerings that make the experience
-                multidemnional and unforgettable.
-              </p>
+              <p>Indulge your senses and connect with community.</p>
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row g-4">
           <div class="col-md-4">
-            <div class="portfolio-item image-zoom">
+            <div class="gallery-item image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/gallery1.jpg" />
+                <img src="./assets/images/gallery-1.jpg" />
               </div>
-              <a href="#" class="iconbox"><i class="ri-search-line"></i></a>
+              <a
+                href="./assets/images/gallery-1.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
+            </div>
+            <div class="gallery-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery-2.jpg" />
+              </div>
+              <a
+                href="./assets/images/gallery-2.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="gallery-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery-3.jpg" />
+              </div>
+              <a
+                href="./assets/images/gallery-3.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
+            </div>
+            <div class="gallery-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery-4.jpg" />
+              </div>
+              <a
+                href="./assets/images/gallery-4.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="gallery-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery-5.jpg" />
+              </div>
+              <a
+                href="./assets/images/gallery-5.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
+            </div>
+            <div class="gallery-item image-zoom mt-4">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/gallery-6.jpg" />
+              </div>
+              <a
+                href="./assets/images/gallery-6.jpg"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-line"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -300,5 +361,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script>
+      Fancybox.bind('[data-fancybox="gallery"]', {
+        //
+      });
+    </script>
   </body>
 </html>
