--- a/index.html
+++ b/index.html
@@ -358,6 +358,25 @@
       </div>
     </section>
 
+    <!-- reviews -->
+
+    <section id="reviews" class="'section-padding bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">Reviews</h1>
+              <div class="line"></div>
+              <p>Read reviews from attendees and speakers.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row gy-5 g-4">
+          <div class="col-lg-4 col-sm-6"></div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
