--- a/index.html
+++ b/index.html
@@ -372,7 +372,25 @@
           </div>
         </div>
         <div class="row gy-5 g-4">
-          <div class="col-lg-4 col-sm-6"></div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
