--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <div class="row gy-5 g-4">
           <div class="col-lg-4 col-sm-6">
             <div class="review">
-              <div class="review-head">
+              <div class="review-head p-4 bg-white theme-shadow">
                 <div>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -388,6 +388,161 @@
                   quisquam adipisci velit! Accusantium repellendus saepe
                   repudiandae sunt perspiciatis rem odit.
                 </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-1.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Niko Cokinos</h5>
+                  <small class="text-uppercase">Speaker</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head p-4 bg-white theme-shadow">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-2.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Mackenzie Broadhurst</h5>
+                  <small class="text-uppercase">Attendee</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head p-4 bg-white theme-shadow">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-3.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Luis Vazquez</h5>
+                  <small class="text-uppercase">Attendee</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head p-4 bg-white theme-shadow">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-4.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Stanislav Vassiljev</h5>
+                  <small class="text-uppercase">Chef</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head p-4 bg-white theme-shadow">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-5.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Julio Montanez</h5>
+                  <small class="text-uppercase">Attendee</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="review">
+              <div class="review-head p-4 bg-white theme-shadow">
+                <div>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Numquam asperiores reiciendis pariatur accusantium similique
+                  quisquam adipisci velit! Accusantium repellendus saepe
+                  repudiandae sunt perspiciatis rem odit.
+                </p>
+              </div>
+              <div class="review-person mt-4 d-flex align-items-center">
+                <img
+                  class="rounded-circle"
+                  src="./assets/images/avatar-6.jpg"
+                />
+                <div class="ms-3">
+                  <h5>Karl Henley</h5>
+                  <small class="text-uppercase">Speaker</small>
+                </div>
               </div>
             </div>
           </div>
