--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -404,7 +404,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -433,7 +433,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -462,7 +462,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -491,7 +491,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
@@ -520,7 +520,7 @@
           <div class="col-lg-4 col-sm-6">
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
-                <div>
+                <div class="text-warning">
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
                   <i class="ri-star-fill"></i>
