--- a/index.html
+++ b/index.html
@@ -359,13 +359,12 @@
     </section>
 
     <!-- reviews -->
-
-    <section id="reviews" class="'section-padding bg-light">
+    <section id="reviews" class="section-padding bg-light">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">Reviews</h1>
+              <h1 class="display-4 fw-semibold">REVIEWS</h1>
               <div class="line"></div>
               <p>Read reviews from attendees and speakers.</p>
             </div>
@@ -543,6 +542,34 @@
                   <h5>Karl Henley</h5>
                   <small class="text-uppercase">Speaker</small>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- speakers -->
+    <section id="speakers" class="section-padding">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">SPEAKERS</h1>
+              <div class="line"></div>
+              <p>Meet the minds.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-1.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4>Jon Doe</h4>
+                <p class="mb-0">RESEARCHER</p>
               </div>
             </div>
           </div>
