--- a/index.html
+++ b/index.html
@@ -561,15 +561,103 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row g-4 text-center">
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-4.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Jon Doe</h4>
+                <p class="mb-0 text-white">RESEARCHER</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-6.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Jessica Smith</h4>
+                <p class="mb-0 text-white">HERBALIST</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-8.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Sarah Jones</h4>
+                <p class="mb-0 text-white">Florist</p>
+              </div>
+            </div>
+          </div>
           <div class="col-md-4">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-1.jpg" />
               </div>
               <div class="speaker-content">
-                <h4>Jon Doe</h4>
-                <p class="mb-0">RESEARCHER</p>
+                <h4 class="text-white">Michael Williams</h4>
+                <p class="mb-0 text-white">RESEARCHER</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-5.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Tim White</h4>
+                <p class="mb-0 text-white">HERBALIST</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-7.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Allison Johnson</h4>
+                <p class="mb-0 text-white">BIOLOGIST</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-3.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">John Deere</h4>
+                <p class="mb-0 text-white">FARMER</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-9.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Mary Fisher</h4>
+                <p class="mb-0 text-white">RESEARCHER</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/person-2.jpg" />
+              </div>
+              <div class="speaker-content">
+                <h4 class="text-white">Bob Wheeler</h4>
+                <p class="mb-0 text-white">BOTANIST</p>
               </div>
             </div>
           </div>
