--- a/index.html
+++ b/index.html
@@ -665,6 +665,62 @@
       </div>
     </section>
 
+    <!-- contact -->
+    <section id="contact" class="section-padding bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 text-white fw-semibold">CONTACT</h1>
+              <div class="line bg-white"></div>
+              <p class="text-white">Get in touch with us!</p>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <form action="#" class="row g-3">
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="First Name"
+                />
+              </div>
+              <div class="form-group col-lg-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Last Name"
+                />
+              </div>
+              <div class="form-group col-lg-12">
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Email Address"
+                />
+              </div>
+              <div class="form-group col-lg-12">
+                <input type="text" class="form-control" placeholder="Subject" />
+              </div>
+              <div class="form-group col-lg-12">
+                <textarea
+                  name="message"
+                  class="form-control"
+                  rows="5"
+                  placeholder="Message"
+                ></textarea>
+              </div>
+              <div class="form-group col-lg-12 d-grid">
+                <button class="btn btn-brand">Send Messsage</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
