--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#blog">Blog</a>
+              <a class="nav-link" href="#news">News</a>
             </li>
           </ul>
           <a href="#" class="btn btn-brand ms-lg-3">Tickets</a>
@@ -382,10 +382,14 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  I am blown away by Botanik! Each session was an enlightening
+                  journey into the fascinating world of plants. The speakers
+                  were incredibly knowledgeable and passionate, making every
+                  topic come alive. I learned so much about botany, gardening
+                  techniques, and environmental sustainability. The series not
+                  only enriched my understanding but also rekindled my love for
+                  nature. Kudos to the organizers for putting together such an
+                  inspiring event!
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -411,10 +415,14 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  Attending Botanik was a transformative experience! The expert
+                  speakers shared their insights with incredible clarity and
+                  enthusiasm. It felt like they were unlocking the secrets of
+                  the plant kingdom right before our eyes. I left each session
+                  feeling more connected to nature and armed with practical tips
+                  for cultivating my own garden. This series is an absolute must
+                  for anyone who wants to deepen their appreciation for plants
+                  and the environment.
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -440,10 +448,14 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  Botanik exceeded all my expectations! The diverse range of
+                  topics covered, from plant communication to sustainable urban
+                  gardening, kept me engaged and eager for each new session. The
+                  speakers were not only experts in their fields but also gifted
+                  communicators who made complex concepts easy to understand.
+                  I've gained a wealth of knowledge that I can apply to my own
+                  gardening endeavors. This series has reinvigorated my passion
+                  for plants and ignited a newfound curiosity.
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -469,10 +481,15 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  I was thoroughly impressed by Botanik! The organizers did a
+                  fantastic job curating a lineup of speakers who shared their
+                  expertise with infectious enthusiasm. I found myself
+                  captivated by the stories of plant adaptations, symbiotic
+                  relationships, and the importance of biodiversity. It's rare
+                  to find an event that strikes a perfect balance between
+                  education and entertainment, but this series nailed it. I'm
+                  grateful for the new perspectives I've gained and the
+                  inspiration to incorporate more greenery into my life.
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -498,10 +515,15 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  What an enlightening experience Botanik has been! The
+                  presentations were thought-provoking and incredibly
+                  informative. I appreciated how the speakers delved into not
+                  only the scientific aspects of plants but also their cultural
+                  and artistic significance. It's clear that the organizers put
+                  a lot of effort into selecting speakers who are not only
+                  experts but also gifted communicators. This series has
+                  deepened my love for plants and expanded my understanding of
+                  their role in our world.
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -527,10 +549,15 @@
                   <i class="ri-star-fill"></i>
                 </div>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Numquam asperiores reiciendis pariatur accusantium similique
-                  quisquam adipisci velit! Accusantium repellendus saepe
-                  repudiandae sunt perspiciatis rem odit.
+                  Attending Botanik was a true delight! I was amazed by the
+                  depth and breadth of topics covered, from plant folklore to
+                  the latest advancements in horticulture. The speakers brought
+                  their subjects to life with compelling anecdotes and visuals
+                  that made the learning experience engaging and enjoyable. This
+                  series has kindled a newfound appreciation for the intricate
+                  world of plants, and I'm excited to incorporate the knowledge
+                  gained into my gardening endeavors. Kudos to the organizers
+                  for a job well done!
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -666,7 +693,7 @@
     </section>
 
     <!-- contact -->
-    <section id="contact" class="section-padding bg-dark">
+    <section id="contact" class="section-padding">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
@@ -679,7 +706,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <form action="#" class="row g-3">
+            <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
               <div class="form-group col-lg-6">
                 <input
                   type="text"
@@ -716,6 +743,77 @@
                 <button class="btn btn-brand">Send Messsage</button>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- news -->
+    <section id="news" class="section-padding bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center">
+            <div class="section-title">
+              <h1 class="display-4 fw-semibold">RECENT NEWS</h1>
+              <div class="line"></div>
+              <p>Stay up to date on Botanik news.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/blog-post-2.jpg" />
+              </div>
+              <h5 class="mt-4">
+                "New Study Reveals Promising Health Benefits of Herbal Medicine:
+                A Natural Approach to Wellness Gains Recognition"
+              </h5>
+              <p>
+                A novel study has unveiled the potential health merits of herbal
+                medicine, highlighting a burgeoning acknowledgment of nature's
+                role in fostering comprehensive well-being and holistic health
+                solutions.
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/blog-post-1.jpg" />
+              </div>
+              <h5 class="mt-4">
+                Renowned Plant Researcher Discovers Breakthrough Method for
+                Boosting Crop Yields and Climate Resilience
+              </h5>
+              <p>
+                Celebrated plant researcher's groundbreaking findings unveil a
+                transformative technique to amplify agricultural output and
+                bolster crops against climatic challenges, heralding a new era
+                of agricultural innovation.
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="speaker image-zoom">
+              <div class="image-zoom-wrapper">
+                <img src="./assets/images/blog-post-3.jpg" />
+              </div>
+              <h5 class="mt-4">
+                "Botanical Innovations at the Forefront of Sustainability: How
+                Plant Research Is Paving the Way for Eco-Friendly Solutions"
+              </h5>
+              <p>
+                At the forefront of sustainability, botanical innovations are
+                reshaping eco-friendly solutions. Plant research stands as a
+                pioneering force, driving advancements that promise a greener
+                and more harmonious future.
+              </p>
+              <a href="#">READ MORE</a>
+            </div>
           </div>
         </div>
       </div>
