--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
         <div class="row">
           <div class="col-12 text-center">
             <div class="section-title">
-              <h1 class="display-4 fw-semibold">RECENT NEWS</h1>
+              <h1 class="display-4 fw-semibold">BOTANIK NEWS</h1>
               <div class="line"></div>
               <p>Stay up to date on Botanik news.</p>
             </div>
@@ -764,7 +764,7 @@
           <div class="col-md-4">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/blog-post-2.jpg" />
+                <img src="./assets/images/blog-post-3.jpg" />
               </div>
               <h5 class="mt-4">
                 "New Study Reveals Promising Health Benefits of Herbal Medicine:
@@ -800,7 +800,7 @@
           <div class="col-md-4">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
-                <img src="./assets/images/blog-post-3.jpg" />
+                <img src="./assets/images/blog-post-2.jpg" />
               </div>
               <h5 class="mt-4">
                 "Botanical Innovations at the Forefront of Sustainability: How
@@ -818,6 +818,103 @@
         </div>
       </div>
     </section>
+
+    <!-- footer -->
+    <footer class="bg-dark">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row gy-5">
+            <div class="col-lg-3 col-sm-6">
+              <a href="#">
+                <img src="./assets/images/logo-dark.svg" alt="" />
+              </a>
+              <div class="line"></div>
+              <p>Green thumbs unite.</p>
+              <div>
+                <a href="#">
+                  <i class="ri-instagram-line"></i>
+                </a>
+                <a href="#">
+                  <i class="ri-linkedin-box-line"></i>
+                </a>
+                <a href="#">
+                  <i class="ri-facebook-box-line"></i>
+                </a>
+                <a href="#">
+                  <i class="ri-spotify-line"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <h5>OFFERINGS</h5>
+              <div class="line"></div>
+              <ul>
+                <li>
+                  <a href="#">Speakers</a>
+                </li>
+                <li>
+                  <a href="#">Workshops</a>
+                </li>
+                <li>
+                  <a href="#">Cuisine</a>
+                </li>
+                <li>
+                  <a href="#">Wares</a>
+                </li>
+                <li>
+                  <a href="#">Entertainment</a>
+                </li>
+                <li>
+                  <a href="#">Gardens</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <h5>ABOUT</h5>
+              <div class="line"></div>
+              <ul>
+                <li>
+                  <a href="#">News</a>
+                </li>
+                <li>
+                  <a href="#">Offerings</a>
+                </li>
+                <li>
+                  <a href="#">Company</a>
+                </li>
+                <li>
+                  <a href="#">Career</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+              <h5>CONTACT</h5>
+              <div class="line"></div>
+              <ul>
+                <li>Aspen, CO 81611</li>
+                <li>(555)-555-5555</li>
+                <li>www.botanik.com</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="container">
+          <div class="row g-4 justify-content-between">
+            <div class="col-auto">
+              <p class="mb-0">© Copyright Botanik. All Rights Reserved</p>
+            </div>
+            <div class="col-auto">
+              <p class="mb-0">
+                Designed by
+                <a href="https://micaoz-3e29397c429a.herokuapp.com/">Mica Oz</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
