--- a/index.html
+++ b/index.html
@@ -828,9 +828,9 @@
               <a href="#">
                 <img src="./assets/images/logo-dark.svg" alt="" />
               </a>
-              <div class="line"></div>
+              <div class="line bg-white"></div>
               <p>Green thumbs unite.</p>
-              <div>
+              <div class="social-icons">
                 <a href="#">
                   <i class="ri-instagram-line"></i>
                 </a>
@@ -845,10 +845,10 @@
                 </a>
               </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-              <h5>OFFERINGS</h5>
+            <div class="footer-box col-lg-3 col-sm-6">
+              <h5 class="mb-0 text-white">OFFERINGS</h5>
               <div class="line"></div>
-              <ul>
+              <ul class="footer-box">
                 <li>
                   <a href="#">Speakers</a>
                 </li>
@@ -869,28 +869,34 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-3 col-sm-6">
-              <h5>ABOUT</h5>
+            <div class="footer-box col-lg-3 col-sm-6">
+              <h5 class="mb-0 text-white">ABOUT</h5>
               <div class="line"></div>
-              <ul>
+              <ul class="footer-box">
                 <li>
-                  <a href="#">News</a>
+                  <a href="#news">News</a>
                 </li>
                 <li>
-                  <a href="#">Offerings</a>
+                  <a href="#offerings">Offerings</a>
                 </li>
                 <li>
-                  <a href="#">Company</a>
+                  <a href="#about">Company</a>
                 </li>
                 <li>
                   <a href="#">Career</a>
                 </li>
+                <li>
+                  <a href="#gallery">Gallery</a>
+                </li>
+                <li>
+                  <a href="#reviews">Reviews</a>
+                </li>
               </ul>
             </div>
-            <div class="col-lg-3 col-sm-6">
-              <h5>CONTACT</h5>
+            <div class="footer-box col-lg-3 col-sm-6">
+              <h5 class="mb-0 text-white">CONTACT</h5>
               <div class="line"></div>
-              <ul>
+              <ul class="footer-box">
                 <li>Aspen, CO 81611</li>
                 <li>(555)-555-5555</li>
                 <li>www.botanik.com</li>
