--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
       <div class="container-fluid">
@@ -40,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#hero">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
@@ -74,11 +75,16 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1 class="text-uppercase text-white fw-semibold display-1">
+            <h1
+              class="text-uppercase text-white fw-semibold display-1"
+              data-aos="fade-right"
+            >
               Welcome to Botanik
             </h1>
-            <h2 class="text-white mt-3 mb-4">GREEN THUMBS UNITE</h2>
-            <div class="'hero-btns">
+            <h2 class="text-white mt-3 mb-4" data-aos="fade-left">
+              GREEN THUMBS UNITE
+            </h2>
+            <div class="'hero-btns" data-aos="fade-up">
               <a href="#" class="btn btn-light me-2">EXPLORE</a>
               <a href="#" class="btn btn-brand ms-2">TICKETS</a>
             </div>
@@ -91,7 +97,11 @@
     <section id="about" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="50"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">ABOUT BOTANIK</h1>
               <div class="line"></div>
@@ -104,10 +114,10 @@
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-down" data-aos-delay="150">
             <img src="./assets/images/about.jpg" alt="about" />
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
             <h1 class="abouth1">A gathering of minds.</h1>
             <p class="mt-3 mb-4">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -160,7 +170,11 @@
     <section id="offerings" class="section-padding border-top">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">OFFERINGS</h1>
               <div class="line"></div>
@@ -172,7 +186,11 @@
           </div>
         </div>
         <div class="row g-4 text-center">
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="offerings theme-shadow p-lg-5 p-4">
               <div class="iconbox">
                 <i class="ri-speak-line"></i>
@@ -184,7 +202,11 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="250"
+          >
             <div class="offerings theme-shadow p-lg-5 p-4">
               <div class="iconbox">
                 <i class="ri-shapes-line"></i>
@@ -196,7 +218,11 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="offerings theme-shadow p-lg-5 p-4">
+            <div
+              class="offerings theme-shadow p-lg-5 p-4"
+              data-aos="fade-down"
+              data-aos-delay="350"
+            >
               <div class="iconbox">
                 <i class="ri-restaurant-line"></i>
               </div>
@@ -208,7 +234,11 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="offerings theme-shadow p-lg-5 p-4">
+            <div
+              class="offerings theme-shadow p-lg-5 p-4"
+              data-aos="fade-down"
+              data-aos-delay="450"
+            >
               <div class="iconbox">
                 <i class="ri-shopping-basket-line"></i>
               </div>
@@ -219,7 +249,11 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="offerings theme-shadow p-lg-5 p-4">
+            <div
+              class="offerings theme-shadow p-lg-5 p-4"
+              data-aos="fade-down"
+              data-aos-delay="550"
+            >
               <div class="iconbox">
                 <i class="ri-sparkling-line"></i>
               </div>
@@ -231,7 +265,11 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="offerings theme-shadow p-lg-5 p-4">
+            <div
+              class="offerings theme-shadow p-lg-5 p-4"
+              data-aos="fade-down"
+              data-aos-delay="650"
+            >
               <div class="iconbox">
                 <i class="ri-seedling-line"></i>
               </div>
@@ -249,19 +287,35 @@
     <section id="counter" class="section-padding">
       <div class="container text-center">
         <div class="row g-4">
-          <div class="col-lg-3 col-sm-6">
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <h1 class="display-4">15</h1>
             <h6 class="text-uppercase mt-3 mb-0">Speakers</h6>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="250"
+          >
             <h1 class="display-4">33</h1>
             <h6 class="text-uppercase mt-3 mb-0">Workshops</h6>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="350"
+          >
             <h1 class="display-4">150+</h1>
             <h6 class="text-uppercase mt-3 mb-0">Vendors</h6>
           </div>
-          <div class="col-lg-3 col-sm-6">
+          <div
+            class="col-lg-3 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="450"
+          >
             <h1 class="display-4">2,000+</h1>
             <h6 class="text-uppercase mt-3 mb-0">Attendees</h6>
           </div>
@@ -273,7 +327,11 @@
     <section id="gallery" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">GALLERY</h1>
               <div class="line"></div>
@@ -282,7 +340,7 @@
           </div>
         </div>
         <div class="row g-4">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="gallery-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/gallery-1.jpg" />
@@ -306,7 +364,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="gallery-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/gallery-3.jpg" />
@@ -330,7 +388,7 @@
               ></a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
             <div class="gallery-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/gallery-5.jpg" />
@@ -362,7 +420,11 @@
     <section id="reviews" class="section-padding bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">REVIEWS</h1>
               <div class="line"></div>
@@ -371,7 +433,11 @@
           </div>
         </div>
         <div class="row gy-5 g-4">
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -404,7 +470,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="250"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -437,7 +507,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="350"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -455,7 +529,7 @@
                   communicators who made complex concepts easy to understand.
                   I've gained a wealth of knowledge that I can apply to my own
                   gardening endeavors. This series has reinvigorated my passion
-                  for plants and ignited a newfound curiosity.
+                  for plants.
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -470,7 +544,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="450"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -504,7 +582,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="550"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -538,7 +620,11 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div
+            class="col-lg-4 col-sm-6"
+            data-aos="fade-down"
+            data-aos-delay="650"
+          >
             <div class="review">
               <div class="review-head p-4 bg-white theme-shadow">
                 <div class="text-warning">
@@ -556,8 +642,7 @@
                   that made the learning experience engaging and enjoyable. This
                   series has kindled a newfound appreciation for the intricate
                   world of plants, and I'm excited to incorporate the knowledge
-                  gained into my gardening endeavors. Kudos to the organizers
-                  for a job well done!
+                  gained into my gardening endeavors. Kudos to the organizers!
                 </p>
               </div>
               <div class="review-person mt-4 d-flex align-items-center">
@@ -580,7 +665,11 @@
     <section id="speakers" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">SPEAKERS</h1>
               <div class="line"></div>
@@ -589,7 +678,7 @@
           </div>
         </div>
         <div class="row g-4 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-4.jpg" />
@@ -600,7 +689,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-6.jpg" />
@@ -611,7 +700,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-8.jpg" />
@@ -622,7 +711,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="450">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-1.jpg" />
@@ -633,7 +722,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="550">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-5.jpg" />
@@ -644,7 +733,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="650">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-7.jpg" />
@@ -655,7 +744,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="750">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-3.jpg" />
@@ -666,7 +755,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="850">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-9.jpg" />
@@ -677,7 +766,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="950">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/person-2.jpg" />
@@ -696,7 +785,11 @@
     <section id="contact" class="section-padding">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 text-white fw-semibold">CONTACT</h1>
               <div class="line bg-white"></div>
@@ -704,7 +797,11 @@
             </div>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div
+          class="row justify-content-center"
+          data-aos="fade-down"
+          data-aos-delay="250"
+        >
           <div class="col-lg-8">
             <form action="#" class="row g-3 p-lg-5 p-4 bg-white theme-shadow">
               <div class="form-group col-lg-6">
@@ -752,7 +849,11 @@
     <section id="news" class="section-padding bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">
+          <div
+            class="col-12 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="section-title">
               <h1 class="display-4 fw-semibold">BOTANIK NEWS</h1>
               <div class="line"></div>
@@ -761,7 +862,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/blog-post-3.jpg" />
@@ -779,7 +880,7 @@
               <a href="#">READ MORE</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/blog-post-1.jpg" />
@@ -797,7 +898,7 @@
               <a href="#">READ MORE</a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
             <div class="speaker image-zoom">
               <div class="image-zoom-wrapper">
                 <img src="./assets/images/blog-post-2.jpg" />
@@ -925,6 +1026,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js
     "></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script>
       Fancybox.bind('[data-fancybox="gallery"]', {
         //
