--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/FAVI.png" />
+    <!-- <link rel="icon" type="image/x-icon" href="./assets/images/FAVI.png" /> -->
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <!-- navbar -->
